--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
    
         <div class=" text-white  "  >
             <h6 style="display: inline-block; font-family: 'Poppins', sans-serif;">New user?</h6>
-            <a href="{%url 'register'%}"><button class="btn btn-outline-warning" style="display: inline-block; font-family: 'Poppins', sans-serif;">Sign up</button></a>
+            <a href=""><button class="btn btn-outline-warning" style="display: inline-block; font-family: 'Poppins', sans-serif;">Sign up</button></a>
         </div>
     </div>
     <div>
